Hae laskennan resurssit uudella HTTP-clientilla
Ei toiminnallisia muutoksia, toivottavasti